All bugs removed

--- a/careers.html
+++ b/careers.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Edtech Marine
-    Services</title>
+    <title>Edtech Marine Services
+    </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,10 +19,10 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet">
-  </head>
+    <link href="css/style.css" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -36,137 +36,139 @@
                 </button>
                 <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
                 <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
-                 <!-- <img src="logo.png" alt="image1" id="logo"> -->
-              </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li >
-                          <a href="about.html">About</a>
-                      </li>
-                      <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="spares.html">Stores and Spares</a>
-                                </li>
-
-                                <li>
-                                    <a href="spares.html">Edtech Agency and Husbandry </a>
-                                </li>
-                                <li>
-                                    <a href="engineering.html">Edtech Engineering</a>
-                                </li>
-                                <li>
-                                    <a href="safety.html">Edtech Safety and Automation</a>
-                                </li>
-                                <li>
-                                    <a href="itservices.html">Edtech I.T Services</a>
-                                </li>
-
-                            </ul>
-                        </li>
-
-                      <li>
-                          <a href="product.html">Products</a>
-                      </li>
-                      <li class="active">
-                          <a href="careers.html">Careers</a>
-                      </li>
-
-                      <li>
-                          <a href="contact.html">Contact Us</a>
-                      </li>
-
-                  </ul>
-              </div>
-              <!-- /.navbar-collapse -->
+                <!-- <img src="logo.png" alt="image1" id="logo"> -->
             </div>
-            <!-- /.container -->
-            </nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="spares.html">Stores and Spares</a>
+                            </li>
 
-            <!-- Page Content -->
-            <div class="container">
+                            <li>
+                                <a href="spares.html">Edtech Agency and Husbandry </a>
+                            </li>
+                            <li>
+                                <a href="engineering.html">Edtech Engineering</a>
+                            </li>
+                            <li>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
+                            </li>
 
-            <!-- Page Heading/Breadcrumbs -->
-            <div class="row">
-              <div class="col-lg-12">
+                        </ul>
+                    </li>
 
-                  <ol class="breadcrumb">
-                      <li><a href="index.html" style="color: black">Home</a>
-                      </li>
-                      <li class="active">Careers</li>
-                  </ol>
-              </div>
+                    <li>
+                        <a href="product.html">Products</a>
+                    </li>
+                    <li class="active">
+                        <a href="careers.html">Careers</a>
+                    </li>
+
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+
+                </ul>
             </div>
-            <!-- /.row -->
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-            <!-- Intro Content -->
-            <div class="row">
-              <!---<div class="col-md-6">
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Heading/Breadcrumbs -->
+        <div class="row">
+            <div class="col-lg-12">
+
+                <ol class="breadcrumb">
+                    <li><a href="index.html" style="color: black">Home</a>
+                    </li>
+                    <li class="active">Careers</li>
+                </ol>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Intro Content -->
+        <div class="row">
+            <!---<div class="col-md-6">
                   <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
 
-              <div class="col-md-12">
+            <div class="col-md-12">
 
-            <p id="p1">  Edtech Marine Services is always on the lookout for great talent. If you would like to be part of our team,
-               you can drop us an email with your resume at <a href="contact.html"> info@edtech.com.sg </a>
-            </p>
+                <p id="p1"> Edtech Marine Services is always on the lookout for great talent.
+                  If you would like to be part of our team, you can drop us an email with your
+                  resume at <a href="mailto:info@edtech.com.sg" style="color:blue"><u> info@edtech.com.sg</u> </a>
+                </p>
 
- <button type="button"  id="b1" onclick="window.location.href='contact.html'" > Enquire Now! </button>
+                <button type="button" id="b1" onclick="window.location.href='contact.html'"> Enquire Now! </button>
 
-          </div>
+            </div>
         </div>
-      </div>
+    </div>
 
-        <hr>
+    <hr>
 
-<div class="row">
-  <div class="col-md-12">
-        <div class="container-fluid" id="c2">
-         <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
-        <!-- </div> -->
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container-fluid" id="c2">
+                <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+                <!-- </div> -->
 
-          <div class="row color-blue">
+                <div class="row color-blue">
 
-                     <div class="col-md-3">
-                         <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                    <div class="col-md-3">
+                        <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
                         <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
                         <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                         <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                         <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
 
 
-                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
                         <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                         <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
 
 
-                     </div>
+                    </div>
 
 
-                     <div class="col-md-3">
-                         <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                    <div class="col-md-3">
+                        <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
+                            <br>SUPPLY </p>
                         <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
                         <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
                         <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                         <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
 
 
-                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
                         <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                         <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
 
 
-                     </div>
+                    </div>
 
 
 
 
-                     <div class="col-md-3">
-                         <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
-                        <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                    <div class="col-md-3">
+                        <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                        <p style="font-size: 16px; color: white"> Mr Saini Singh, Engineer </p>
                         <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                         <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                         <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
@@ -174,47 +176,47 @@
 
 
 
-                     </div>
+                    </div>
 
 
 
 
-                     <div class="col-md-3">
-                         <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
-                        <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                    <div class="col-md-3">
+                        <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
+                            <br>SERVICES </p>
+                        <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
                         <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                         <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                         <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
 
-                        <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                        <p style="font-size: 16px; color: white"> 2.Mr Jagjit Singh, Director</p>
                         <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                         <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
-                     </div>
+                    </div>
 
 
 
 
-                     <!-- <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                          <img class="img-responsive" src="http://placehold.it/700x450" alt="">
                      </div> -->
-                 </div>
-                 </div>
-
-</div>
-
-                <!-- Footer -->
-                <footer>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <p> CCopyright &copy; Your Website 2016</p>
-                        </div>
-                    </div>
-                </footer>
-
+                </div>
             </div>
 
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p> CCopyright &copy; Your Website 2016</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
 
 
 
@@ -225,10 +227,8 @@
 
 
 
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+</body>
 
-
-  <script src="js/jquery.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-      </body>
-
-      </html>
+</html>
