--- a/engineering.html
+++ b/engineering.html
@@ -244,7 +244,7 @@
 
             <div class="col-md-3">
                 <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
-                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer </p>
+                <p style="font-size: 16px; color: white"> Mr Saini Singh, Engineer </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
@@ -265,7 +265,7 @@
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
 
-                <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> 2.Mr Jagjit Singh, Director</p>
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
