--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <!-- <div class="col-lg-12">
                         <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
                    </div> -->
-            <div class="col-md-3 flick">
+            <div class="col-md-3 ">
                 <p style="font-size: 18px; color: white " > EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
                 <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
@@ -311,13 +311,19 @@
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
+<!-- to add another contact copy paste the code below and make the relevant changes  -->
+
+                <!-- <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p> -->
+
 
 
 
             </div>
 
 
-            <div class="col-md-3 flick">
+            <div class="col-md-3 ">
                 <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
                     <br>SUPPLY </p>
                 <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
@@ -336,9 +342,9 @@
 
 
 
-            <div class="col-md-3 flick">
+            <div class="col-md-3 ">
                 <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
-                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer </p>
+                <p style="font-size: 16px; color: white"> Mr Saini Singh, Engineer </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
@@ -351,7 +357,7 @@
 
 
 
-            <div class="col-md-3 flick">
+            <div class="col-md-3 ">
                 <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
                     <br>SERVICES </p>
                 <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
@@ -359,7 +365,7 @@
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
 
-                <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> 2..Mr Jagjit Singh, Director</p>
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
