--- a/itservices.html
+++ b/itservices.html
@@ -12,7 +12,7 @@
     <title>Edtech Marine Services</title>
 
     <!-- Bootstrap Core CSS -->
-   <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -35,64 +35,64 @@
 
 
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                  </button>
-                  <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
-                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
-              </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li>
-                          <a href="about.html">About</a>
-                      </li>
-                      <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="spares.html">Stores and Spares</a>
-                                </li>
-                                <li>
-                                    <a href="spares.html">Edtech Agency and Husbandry </a>
-                                </li>
-                                <li>
-                                    <a href="engineering.html">Edtech Engineering</a>
-                                </li>
-                                <li>
-                                    <a href="safety.html">Edtech Safety and Automation</a>
-                                </li>
-                                <li>
-                                    <a href="itservices.html">Edtech I.T Services</a>
-                                </li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
+                <!-- <img src="logo.png" alt="image1" id="logo"> -->
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="spares.html">Stores and Spares</a>
+                            </li>
+                            <li>
+                                <a href="spares.html">Edtech Agency and Husbandry </a>
+                            </li>
+                            <li>
+                                <a href="engineering.html">Edtech Engineering</a>
+                            </li>
+                            <li>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
+                            </li>
 
-                            </ul>
-                        </li>
-                      <li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="product.html">Products</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a href="careers.html">Careers</a>
-                      </li>
-                      <li>
-                          <a href="contact.html">Contact Us</a>
-                      </li>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
 
 
-              </div>
-              <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container -->
-      </nav>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -109,112 +109,207 @@
             </div>
         </div>
         <!-- /.row -->
-</nav>
+        </nav>
         <!-- Intro Content -->
         <div class="row">
-          <h2 id="s2"> I.T Services </h2>
-          <hr>
+            <h2 id="s2"> I.T Services </h2>
+            <hr>
             <!---<div class="col-md-6">
                 <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
+        </div>
+        <div class="col-md-6">
+
+            <h2 id="s1" style="color:blue"> On Board IT troubleshooting </h2>
+
+            <p style="font-size:21px"> The complexity of having IT onboard vessels in remote locations with poor connections, is complex. Most IT supporters outside the maritime industry would be surprised to see the challenges when supporting IT onboard vessels. Issues which are
+                easily solved in a normal environment suddenly becomes difficult due to the obstacles in replacing hardware, downloading and installing the latest patches and re-populating a corrupt database.
+                <br> At Edtech Marine our team of specialized IT engineers are capable of handling all the challenges in running IT equipment onboard vessels. Whether it is the physical hardware, the communication lines or the security or the software used
+                our specialized team will solve your problems.
+
+            </p>
+
+
+            <h2 id="t1" style="color:blue"> I.T Services</h2>
+            <!-- <hr id="hr2" width="120%" > -->
+            <ul>
+                <li style="font-size:18px">Single Vessel hardware replacements </li>
+                <li style="font-size:18px">Re-negotiations of your communication lines contracts, to full implementation projects of technical ERP solutions
+                </li>
+                <li style="font-size:18px">Outsourced IT support on a per vessel – per day basis
+                </li>
+                <li style="font-size:18px">Supply of maritime servers and desktops for harsh marine conditions
+                </li>
+                <li style="font-size:18px">Replacing Hardware/Software
+                </li>
+                <li style="font-size:18px">Upgrading Hardware/Software
+                </li>
+                <li style="font-size:18px">Determining IT requirements, selecting the right solutions, planning and implementing of physical installations on board.
+                </li>
+                <li style="font-size:18px">Unique combination of business and IT knowledge ensuring projects are on track and delivered on time.
+                </li>
+                <li style="font-size:18px">Processes and governance around IT equipment such as back-up routines, antivirus policies, policies for crew equipment etc.
+                </li>
+            </ul>
+
+            <h2 id="t2" style="color:blue"> Troubleshooting Process</h2>
+            <!-- <hr id="hr2" width="120%" > -->
+
+            <ul>
+                <li style="font-size:18px">Our process includes interviewing staff and studying available documentation to provide a state of affairs of important aspects in relation to running safe, robust and reliable vessel IT. </li>
+
+                <li style="font-size:18px"> An assessment report will be issued and documentation of the situation will be done via a range of scores, observations and recommendations for improvement.</li>
+
+                <li style="font-size:18px"> The report will be made by our management executive which will include technical observations and recommendations. </li>
+
+
+
+
+            </ul>
+
+            <div class="col-md-4">
+                <div class="images">
+                    <a target="_blank" href="images/dfghdh.png">
+                        <img src="images/dfghdh.png" alt="Forest3" width="289" height="200">
+                    </a>
+
+                </div>
             </div>
-            <div class="col-md-6">
 
-              <h2 id="s1"> On Board IT troubleshooting </h2>
+            <div class="col-md-4">
+                <div class="images">
+                    <a target="_blank" href="images/captain1.jpg">
+                        <img src="images/captain1.jpg" alt="Forest3" width="289" height="200">
+                    </a>
 
-  <p style="font-size:21px"> The complexity of having IT onboard vessels in remote locations with poor connections, is complex.
-    Most IT supporters outside <br>the maritime industry would be surprised to see the challenges when supporting IT
-    onboard vessels. Issues which are easily <br>solved in a normal environment suddenly becomes difficult due to the obstacles
-     in replacing hardware, downloading and installing<br> the latest patches and re-populating a corrupt database.
-     <br>
-     At Edtech Marine our team of specialized IT engineers are capable of handling all the challenges in running IT equipment onboard
-     <br>vessels. Whether it is the physical hardware, the communication lines or the security or the software used our
-     specialized team will<br> solve your problems.
-
-</p>
+                </div>
+            </div>
 
 
-<h2 id="es"> I.T Services</h2>
-<hr id="hr2" width="120%" >
-<ul>
-  <li style="font-size:18px">Single Vessel hardware replacements </li>
-  <li style="font-size:18px">Re-negotiations of your communication lines contracts, to full implementation projects of technical
-    ERP solutions
- </li>
-  <li style="font-size:18px">Outsourced IT support on a per vessel – per day basis
-</li>
-  <li style="font-size:18px">Supply of maritime servers and desktops for harsh marine conditions
- </li>
-  <li style="font-size:18px">Replacing Hardware/Software
- </li>
-  <li style="font-size:18px">Upgrading Hardware/Software
-</li>
-  <li style="font-size:18px">Determining IT requirements, selecting the right solutions, planning and
-    implementing of physical installations on board.
- </li>
-  <li style="font-size:18px">Unique combination of business and IT knowledge ensuring projects are on track and delivered on time.
-</li>
-<li style="font-size:18px">Processes and governance around IT equipment such as back-up routines, antivirus policies,
-  policies for crew equipment etc.
-</li>
-</ul>
+            <div class="col-md-4">
+                <div class="images">
+                    <a target="_blank" href="images/217.jpg">
+                        <img src="images/217.jpg" alt="Forest3" width="289" height="200">
+                    </a>
 
-<h2 id="es"> Troubleshooting Process</h2>
-<hr id="hr2" width="120%" >
+                </div>
+            </div>
 
-<ul>
-<li style="font-size:18px">Our process includes interviewing staff and studying available documentation to provide a state
-   of affairs of important aspects in relation to running safe, robust and reliable vessel IT. </li>
+        </div>
+    </div>
 
-   <li style="font-size:18px"> An assessment report will be issued and documentation of the situation will be done via a range of scores,
-     observations and recommendations for improvement.</li>
 
-     <li style="font-size:18px"> The report will be made by our management executive which will include
-       technical observations and recommendations. </li>
+    <hr>
+
+    <div class="container-fluid" id="c2">
+        <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
+
+        <div class="row color-blue">
+
+            <!-- <div class="col-lg-12">
+                  <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+             </div> -->
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
 
 
-</ul>
+            </div>
 
 
-<div class="images-1">
-  <a target="_blank" href="images/dfghdh.png">
-    <img src="images/dfghdh.png" alt="Forest3" width="289" height="200">
-  </a>
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
+                    <br>SUPPLY </p>
+                <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
 
-</div>
 
-<div class="images-1">
-  <a target="_blank" href="images/captain1.jpg">
-    <img src="images/captain1.jpg" alt="Forest3" width="289" height="200">
-  </a>
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
 
-</div>
 
-<div class="images-1">
-  <a target="_blank" href="images/217.jpg">
-    <img src="images/217.jpg" alt="Forest3" width="289" height="200">
-  </a>
-
-</div>
+            </div>
 
 
 
 
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                <p style="font-size: 16px; color: white"> Mr Saini Singh, Engineer </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
 
 
 
 
+            </div>
 
+
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
+                    <br>SERVICES </p>
+                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                <p style="font-size: 16px; color: white"> 2.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+            </div>
+
+
+
+
+            <!-- <div class="col-md-6">
+                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+             </div> -->
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2016</p>
             </div>
         </div>
+    </footer>
+
+    </div>
+
+
+
+
+
+
+
+
 
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
